unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/pse__Resource_Planner_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that determine the behavior of the resource planner.</description>
    <label>Planners - Resource</label>
</CustomObject>