unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Assignment_Color_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Color_Field__c</fullName>
    <description>Defines the API name of the field on an Assignment that controls the assignment color bars in Resource Planner.</description>
    <inlineHelpText>Defines the API name of the field on an Assignment that controls the assignment color bars in Resource Planner.</inlineHelpText>
    <label>Assignment Color Field</label>
    <length>90</length>
    <type>Text</type>
</CustomField>