unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Availability_Percentage_Precision__c.field-meta.xml
<CustomField>
    <fullName>pse__Availability_Percentage_Precision__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of digits to show to the right of the decimal point when displaying an availability percentage value in the Availability column in Resource Planner.  The value is an integer.  The default is zero.</description>
    <inlineHelpText>The number of digits to show to the right of the decimal point when displaying an availability percentage value in the Availability column in Resource Planner.  The value is an integer.  The default is zero.</inlineHelpText>
    <label>Availability Decimal Precision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>