unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Default_Assignment_Future_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Assignment_Future_Days__c</fullName>
    <defaultValue>270</defaultValue>
    <inlineHelpText>This setting defines the number of future days, from today, for which the enhanced Resource Planner will display assignments. For example, enter 30 to display assignments that start or end within 30 days of today.</inlineHelpText>
    <label>Default Future Days to Show Assignments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>