unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Default_Assignment_Historical_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Assignment_Historical_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <inlineHelpText>This setting defines the number of days prior to today for which the enhanced Resource Planner will display assignments. For example, enter 30 to display assignments that start or end in the preceding 30 days.</inlineHelpText>
    <label>Default Past Days to Show Assignments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>