unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Default_URR_Start_Date_Buffer__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_URR_Start_Date_Buffer__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Determines the number of days to add to the included dates before the start date of the resource request in the Resource Request panel of the Resource Planner.</description>
    <inlineHelpText>Determines the number of days to add to the included dates before the start date of the resource request in the Resource Request panel of the Resource Planner.</inlineHelpText>
    <label>Add Included Dates Before RR Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>