unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Filter_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_Fieldset_Name__c</fullName>
    <inlineHelpText>Determines the fields used for filtering in the Resource Planner. The value is a field set specifying fields available to filter on.</inlineHelpText>
    <label>Resource Planner Filter Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>