unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Inherit_Role_For_Create_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Inherit_Role_For_Create_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the resource role in the Create Assignments dialog is auto-populated from the Contacts record.</description>
    <inlineHelpText>If selected, the resource role in the Create Assignments dialog is auto-populated from the Contacts record.</inlineHelpText>
    <label>Inherit Role For Create Assignment</label>
    <type>Checkbox</type>
</CustomField>