unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Override_Resource_Request_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Resource_Request_Name_Field__c</fullName>
    <inlineHelpText>Specifies the API name of the resource request to display in Resource planner. If this field is blank, the Resource planner displays the Resource Request name by default.</inlineHelpText>
    <label>Override Resource Request Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>