unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__record_load_limit__c.field-meta.xml
<CustomField>
    <fullName>pse__record_load_limit__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>Specifies the number of resources for which child data (assignments and resource requests) load per request. You should not adjust the Record Load Limit without first consulting Customer Support.</inlineHelpText>
    <label>Record Load Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>