unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Res_Request_Tooltip_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Res_Request_Tooltip_Field_Set__c</fullName>
    <defaultValue>"Res_Request_Tooltip_Field_Set"</defaultValue>
    <inlineHelpText>The API name of the field set that contains the fields to show as tooltips for resource requests on the resource planner. The field set must exist in the Resource Request object.</inlineHelpText>
    <label>Resource Request Tooltip Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>