unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Resource_Request_Color_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Color_Field__c</fullName>
    <description>Defines the API name of the field on a Resource Request that controls the Resource Request color bars in Resource Planner.</description>
    <inlineHelpText>Defines the API name of the field on a Resource Request that controls the Resource Request color bars in Resource Planner.</inlineHelpText>
    <label>Resource Request Color Field</label>
    <length>90</length>
    <type>Text</type>
</CustomField>