unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Resource_Search_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Search_Fieldset_Name__c</fullName>
    <inlineHelpText>Determines which Resource fields are searched with the text search box on the resource planner.</inlineHelpText>
    <label>Search Fieldset Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>