unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Restrict_Swapping_Past_Dates__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_Swapping_Past_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, you cannot swap the resource on an assignment with a start date set in the past. The default value is deselected.</description>
    <inlineHelpText>If selected, you cannot swap the resource on an assignment with a start date set in the past. The default value is deselected.</inlineHelpText>
    <label>Restrict Swapping Past Dates</label>
    <type>Checkbox</type>
</CustomField>