unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Use_Light_Blue__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Light_Blue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to use Light Blue for cells in Resource Planner. Default = False.</description>
    <inlineHelpText>Use Light Blue for cells in Resource Planner. Default = False</inlineHelpText>
    <label>Use Light Blue</label>
    <type>Checkbox</type>
</CustomField>