unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Use_Light_Green__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Light_Green__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to use Light Green for cells in Resource Planner. Default = False.</description>
    <inlineHelpText>Use Light Green for cells in Resource Planner. Default = False</inlineHelpText>
    <label>Use Light Green</label>
    <type>Checkbox</type>
</CustomField>