unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Use_Light_Red__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Light_Red__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to use Light Red for cells in Resource Planner. Default = False.</description>
    <inlineHelpText>Use Light Red for cells in Resource Planner. Default = False</inlineHelpText>
    <label>Use Light Red</label>
    <type>Checkbox</type>
</CustomField>