unpackaged/main/default/objects/pse__Resource_Planner_Settings__c/fields/pse__Use_V2_Planner__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_V2_Planner__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This setting determines whether your users see the enhanced (new) or classic Resource Planner.</inlineHelpText>
    <label>DEPRECATED:Use New Resource Planner</label>
    <type>Checkbox</type>
</CustomField>